--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - .:/app
     working_dir: /app
     environment:
+      LOG_LEVEL: fatal
       MONGO_HOST: mongo
       MOCHA_GREP: ${MOCHA_GREP}
     user: node
