[misc] update the dev env from coffeescript to es
Signed-off-by: Jakob Ackermann <das7pad@outlook.com>

--- a/.dockerignore
+++ b/.dockerignore
@@ -38,22 +38,21 @@
 
 ##############
 # app config #
-!/config/settings.defaults.coffee
+!/config/settings.defaults.js
 # app config #
 ##############
 
 #######
 # app #
-!/app.coffee
-!/app/coffee
-!/app/lib
+!/app.js
+!/app
 
-!/test/acceptance/coffee
 !/test/acceptance/config
 !/test/acceptance/fixtures
+!/test/acceptance/js
 !/test/acceptance/libs
 !/test/fixtures
-!/test/smoke/coffee
-!/test/unit/coffee
+!/test/smoke/js
+!/test/unit/js
 # app #
 #######
