[misc] bump the dev env to 4.5.0
Signed-off-by: Jakob Ackermann <das7pad@outlook.com>

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -35,6 +35,7 @@ services:
       - npx
       - mocha
       - --exit
+      - test/acceptance/js/Init.js
       - --recursive
       - --reporter
       - xunit
