--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "underscore": "1.9.1"
   },
   "devDependencies": {
-    "chai": "",
+    "chai": "^4.2.0",
     "eslint": "^6.0.1",
     "eslint-config-prettier": "^6.0.0",
     "eslint-config-standard": "^12.0.0",
@@ -53,7 +53,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "mocha": "^4.1.0",
     "prettier-eslint-cli": "^5.0.0",
-    "sandboxed-module": "",
+    "sandboxed-module": "^2.0.3",
     "sinon": "^1.17.0"
   }
 }
