--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "body-parser": "^1.12.0",
     "coffee-script": "^1.9.1",
     "express": "^4.12.1",
-    "logger-sharelatex": "^1.8.0",
+    "logger-sharelatex": "git+https://github.com/das7pad/logger-sharelatex.git#0a27a2785df04b627bb3557f01ac6e7573a97c61",
     "lru-cache": "^4.0.0",
     "metrics-sharelatex": "^2.2.0",
     "mongojs": "2.4.0",
