--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "express": "^4.12.1",
     "logger-sharelatex": "git+https://github.com/das7pad/logger-sharelatex.git#0a27a2785df04b627bb3557f01ac6e7573a97c61",
     "lru-cache": "^4.0.0",
-    "metrics-sharelatex": "^2.2.0",
+    "metrics-sharelatex": "git+https://github.com/das7pad/metrics-sharelatex.git#866a23f83fcc3e812a70b4b4a88d445323e66988",
     "mongojs": "2.4.0",
     "node-statsd": "0.0.3",
     "request": "^2.88.0",
