[misc] bump the dev env to 9.0.0
Signed-off-by: Jakob Ackermann <das7pad@outlook.com>

--- a/.dockerignore
+++ b/.dockerignore
@@ -56,3 +56,9 @@
 !/test/unit/js
 # app #
 #######
+
+###################
+# build artifacts #
+!/build_artifacts.tar.gz
+# build artifacts #
+###################
