[misc] bump the dev env to 9.4.0
Signed-off-by: Jakob Ackermann <das7pad@outlook.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,13 +29,5 @@ services:
       - mongo
     command: npm run test:acceptance
 
-  tar:
-    build: .
-    image: ci/$PROJECT_NAME:$BRANCH_NAME-$BUILD_NUMBER
-    volumes:
-      - ./:/tmp/build/
-    command: tar -czf /tmp/build/build.tar.gz --exclude=build.tar.gz --exclude-vcs .
-    user: root
-
   mongo:
-    image: mongo:3.4
+    image: mongo
