[misc] use data-dirs instead of setup_env/entry_point
-> proper VOLUMES instead of overlayFS

Signed-off-by: Jakob Ackermann <das7pad@outlook.com>

--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -9,7 +9,11 @@ RUN /docker_cleanup.sh npm ci --only=prod
 
 ADD build_artifacts.tar.gz /app
 
-RUN /app/setup_env.sh
+RUN DATA_DIRS="cache" \
+&&  mkdir -p ${DATA_DIRS} \
+&&  chown node:node ${DATA_DIRS}
+
+VOLUME /app/cache
 
 USER node
 
