--- a/.prettierignore
+++ b/.prettierignore
@@ -1,7 +1,4 @@
 # This file was auto-generated, do not edit it directly.
 # Instead run bin/update_build_scripts from
 # https://github.com/das7pad/sharelatex-dev-env
-{
-  "semi": false,
-  "singleQuote": true
-}
+node_modules
