[misc] bump the dev env to 13.5.0
Signed-off-by: Jakob Ackermann <das7pad@outlook.com>

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -44,6 +44,9 @@ services:
       - test/acceptance/js
     volumes:
       - ./output:/home/node:z
+    tmpfs:
+      - /app/cache:uid=1000,gid=1000
 
   mongo:
     image: mongo
+    tmpfs: /data
