--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,9 @@ services:
     depends_on:
       - mongo
     command: npm run test:acceptance
+    tmpfs:
+      - /app/cache:uid=1000,gid=1000
 
   mongo:
     image: mongo
+    tmpfs: /data
