--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -8,7 +8,7 @@ services:
   test_unit:
     image: ${IMAGE_CI}-dev
     user: node
-    command:
+    entrypoint:
       - npx
       - mocha
       - --exit
@@ -16,7 +16,8 @@ services:
       - --reporter
       - xunit
       - --reporter-options
-      - output=/home/node/unit.xml,suiteName='Unit Tests'
+    command:
+      - output=/home/node/unit.xml,suiteName='App Unit Tests'
       - test/unit/js
     volumes:
       - ./output:/home/node:z
