--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@overleaf/o-error": "^3.0.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
     "logger-sharelatex": "git+https://github.com/das7pad/logger-sharelatex.git#bef2078daae2433a43e61db306e301398199daa0",
     "lru-cache": "^5.1.1",
     "metrics-sharelatex": "git+https://github.com/das7pad/metrics-sharelatex.git#471b0a35d8125818393738cb95702367add6d203",
