--- a/package.json
+++ b/package.json
@@ -24,16 +24,16 @@
   },
   "version": "0.1.4",
   "dependencies": {
+    "@overleaf/metrics": "https://github.com/das7pad/metrics-sharelatex/archive/314238a72d2d91d3b912f4deab4a8be97a99552f.tar.gz",
     "@overleaf/o-error": "^3.0.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
-    "logger-sharelatex": "git+https://github.com/das7pad/logger-sharelatex.git#bef2078daae2433a43e61db306e301398199daa0",
+    "logger-sharelatex": "https://github.com/das7pad/logger-sharelatex/archive/16a8d66c59318ca4b3c236136fd9603ee2edb4f0.tar.gz",
     "lru-cache": "^5.1.1",
-    "metrics-sharelatex": "git+https://github.com/das7pad/metrics-sharelatex.git#471b0a35d8125818393738cb95702367add6d203",
     "mongojs": "git+https://github.com/das7pad/mongojs.git#e39e97bf289435e2d111c6201d3306b6b776d31e",
     "request": "^2.88.2",
-    "settings-sharelatex": "git+https://github.com/das7pad/settings-sharelatex.git#d0797834438df2d102798a64602adf2f71ac8e48",
+    "settings-sharelatex": "https://github.com/das7pad/settings-sharelatex/archive/d0797834438df2d102798a64602adf2f71ac8e48.tar.gz",
     "underscore": "1.9.2"
   },
   "devDependencies": {
