[misc] install mongojs from tar-ball

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "express-jwt": "^6.0.0",
     "logger-sharelatex": "https://github.com/das7pad/logger-sharelatex/archive/16a8d66c59318ca4b3c236136fd9603ee2edb4f0.tar.gz",
     "lru-cache": "^5.1.1",
-    "mongojs": "git+https://github.com/das7pad/mongojs.git#e39e97bf289435e2d111c6201d3306b6b776d31e",
+    "mongojs": "https://github.com/das7pad/mongojs/archive/e39e97bf289435e2d111c6201d3306b6b776d31e.tar.gz",
     "request": "^2.88.2",
     "settings-sharelatex": "https://github.com/das7pad/settings-sharelatex/archive/d0797834438df2d102798a64602adf2f71ac8e48.tar.gz",
     "underscore": "1.9.2"
