[misc] bump the dev env to 17.3.0

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -9,7 +9,7 @@ services:
     image: ${IMAGE_CI}-dev
     user: node
     environment:
-      NODE_OPTIONS: "--unhandled-rejections=strict"
+      NODE_OPTIONS: "--unhandled-rejections=strict --trace-deprecation"
     entrypoint:
       - npx
       - mocha
