--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     working_dir: /app
     environment:
       MOCHA_GREP: ${MOCHA_GREP}
-      NODE_OPTIONS: "--unhandled-rejections=strict"
+      NODE_OPTIONS: "--unhandled-rejections=strict --trace-deprecation"
     command: npm run test:unit
     user: node
 
