--- a/package.json
+++ b/package.json
@@ -26,14 +26,14 @@
   "dependencies": {
     "@overleaf/metrics": "https://github.com/das7pad/metrics-sharelatex/archive/583d38d6130bc95417d70008c259f832ac835b26.tar.gz",
     "@overleaf/o-error": "^3.0.0",
+    "@overleaf/settings": "https://github.com/das7pad/settings-sharelatex/archive/e8942a2a7825619dbc8ab66797b90c684b5ccd2d.tar.gz",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
-    "logger-sharelatex": "https://github.com/das7pad/logger-sharelatex/archive/16a8d66c59318ca4b3c236136fd9603ee2edb4f0.tar.gz",
+    "logger-sharelatex": "https://github.com/das7pad/logger-sharelatex/archive/1cb0c1714a91000f996d3aa49abfa6b5e7e0be58.tar.gz",
     "lru-cache": "^5.1.1",
     "mongodb": "^3.6.0",
     "request": "^2.88.2",
-    "settings-sharelatex": "https://github.com/das7pad/settings-sharelatex/archive/d0797834438df2d102798a64602adf2f71ac8e48.tar.gz",
     "underscore": "1.9.2"
   },
   "devDependencies": {
